CARLI-299 Named columns, fixed padding and alignment

--- a/browserClient/carliApp/sections/subscriptions/_subscriptions.scss
+++ b/browserClient/carliApp/sections/subscriptions/_subscriptions.scss
@@ -31,35 +31,38 @@
         }
 
         .column {
-            //padding: 0;
+            @include vendor-prefix('align-items', 'center');
+            @include flexbox;
+            @include flex(0 0 auto);
+            @include vendor-prefix('justify-content', 'center');
+            padding: .75rem;
         }
 
-        .column:nth-child(1) {
-            @include vendor-prefix('flex-basis', '40%');
+        .column.product-name {
+            @include flex(1 0 10%);
+            @include vendor-prefix('justify-content', 'flex-start');
         }
-        .column:nth-child(2),
-        .column:nth-child(3),
-        .column:nth-child(4),
-        .column:nth-child(5),
-        .column:nth-child(6) {
-            @include vendor-prefix('flex-basis', '5%');
+        .column.selection-history {
             text-align: center;
+            width: 60px;
         }
 
         .column.funded {
-            @include vendor-prefix('flex-basis', '7%');
             text-align: center;
+            width: 80px;
             .fa {
                 color: $orange;
                 @include font-size(22);
             }
         }
-        .column:nth-child(7) {
-            @include vendor-prefix('flex-basis', '15%');
+        .column.last-price {
+            @include flex(0 1 auto);
+            width: 160px;
         }
-        .column:nth-child(9) {
-            @include vendor-prefix('flex-basis', '15%');
-            padding: .25rem;
+        .column.remove {
+            padding: 0;
+            text-align: center;
+            width: 118px;
         }
     }
 }
